apps/blueprint-auth/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blueprint-auth-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: auth.blueprint-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprint-auth-frontend
                port:
                  number: 80
    - host: auth.blueprint-prod.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blueprint-auth-frontend
                port:
                  number: 80
